show transaction and add form

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+
+
+<h3 class="text-center mt-4">Bienvenue sur mon site "Budget de Ilyes ATTIA"</h3>
+
+<app-transaction></app-transaction>
