--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -1,5 +1,36 @@
+<h2 class="text-center">Ajoutez un Pokemon</h2>
 
+<form #addForm="ngForm" class="my-5" (ngSubmit)="onSubmit(addForm)">
+  <div class="container">
+    <div class="row">
+      
+        <div class="col col-md-4">
+          <label for="title" class="form-label">Titre</label><br>
+          <input type="text" name="title" id="title" class="form-control" ngModel required>
+        </div>
+      
+      
+      <div class="col col-md-4">
+        <label for="value" class="form-label">Montant</label>
+        <input type="number" name="value" id="value" class="form-control" ngModel required>
+      </div>
+      <div class="col col-md-4">
+        <label for="category">Catégorie</label>
+        <select name="category" id="category" class="form-control" ngModel required>
+          <option value="depense">Dépense</option>
+          <option value="entrée">Entrée</option>
+        </select>
+      </div>
+      
+      
+    </div>
+  </div>
+  <div class="text-center mt-4">
+    <button type="submit" class="btn btn-primary">Ajouter</button>
+  </div>
+</form>
 
+<h3 class="text-center">Votre solde est de {{ result }}</h3>
 
 <div class="container my-5">
   <table class="table">
@@ -32,4 +63,4 @@
   </table>
 </div>
 
-<app-transaction-form [transactionAdd]="transactionParent"></app-transaction-form>
+<!-- <app-transaction-form [transactionAdd]="transactionParent"></app-transaction-form> -->
